flux-parser/tests/snapshots/expr__parse_types_prims_u16.snap
---
source: pi-parser/tests/expr.rs
expression: "&expr"
---
node:
  PrimitiveType: U16
span:
  range:
    start: 0
    end: 3
  file_id: 0

