flux-parser/tests/snapshots/expr__parse_types_prims_u32.snap
---
source: pi-parser/tests/expr.rs
expression: "&expr"
---
node:
  PrimitiveType: U32
span:
  range:
    start: 0
    end: 3
  file_id: 0

