flux-parser/tests/snapshots/expr__parse_types_prims_u8.snap
---
source: pi-parser/tests/expr.rs
expression: "&expr"
---
node:
  PrimitiveType: U8
span:
  range:
    start: 0
    end: 2
  file_id: 0

